# runestone-wm

./: CMakeLists.txt  CMakeUserPresets.json  build.sh  conanfile.txt
.cache/clangd/index/: client.cpp.7EE8F92D5C00EC1E.idx  client.hpp.6F3510E878F2AFD2.idx  main.cpp.E27F7B07547E5AC7.idx  window_manager.cpp.B191DA463F6FCB1A.idx  window_manager.hpp.2CC22DBA66A1A3A2.idx
include/: client.hpp  window_manager.hpp
src/: main.cpp  window_manager.cpp
